2007-01-29  Christian Persch  <chpe@svn.gnome.org>

	* macros2/gnome-compiler-flags.m4:
	Fix --enable-cxx-warnings checks. Bug #360693.

2007-01-12  Shaun McCance  <shaunm@gnome.org>

	* macros2/gnome-autogen.sh:
	- Fix for #377175 by skipping NO-AUTO-GEN directories, by Christian Persch

2007-01-11  Christian Persch  <chpe@svn.gnome.org>

	* macros2/gnome-autogen.sh: Default to AM 1.9. Bug #323868, patch by
	Christian Kirbach.

2007-01-11  Christian Persch  <chpe@svn.gnome.org>

	* macros2/gnome-common.m4: Define more deprecation symbols.
	Bug #343441.

2006-12-01  Kjartan Maraas  <kmaraas@gnome.org>

	* macros2/gnome-autogen.sh: Make automake 1.10 work too.

2006-10-20  Bastien Nocera  <hadess@hadess.net>

	* macros2/gnome-autogen.sh: exit from the check_m4macros function as
	soon as we have detected some undefined macros, rather than leaving
	the developer wondering what the problem is

2006-05-10  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-common.spec.in: Fix a typo.

2006-03-10  James Henstridge  <james@jamesh.id.au>

	* macros2/gnome-autogen.sh (configure_files): skip directories
	called "_darcs", similar to the handling of other VCS metadata
	dirs.  Fixes bug #321860.

2005-10-24  James Henstridge  <james@jamesh.id.au>

	* macros2/gnome-autogen.sh (configure_files): update find
	expression to not exclude ".." from search.  Fixes non-srcdir
	builds (where $srcdir might be "..").  Fixes bug #319496.

2005-09-20  Stepan Kasal  <kasal@ucw.cz>

	* macros2/gnome-autogen.sh: Prefer newer versions of Automake.
	From bug #305641.

2005-09-20  James Henstridge  <james@jamesh.id.au>

	* configure.in: bump version to 2.12.0

	* macros2/gnome-autogen.sh (configure_files): when searching for
	configure.in files, skip directories starting with a dot.  This
	avoids Bzr, Quilt and Subversion bookkeeping directories among
	others.  Fixes bug #311951.

2005-08-17  Stepan Kasal  <kasal@ucw.cz>

	* macros2/gnome-autogen.sh (add_to_cm_macrodirs): New function,