@@ -1,3 +1,9 @@
+2007-01-29  Mariano Suárez-Alvarez  <mariano@gnome.org>
+
+	Bug 377185 – Hide cmp output in autogen.sh
+
+	* macros2/gnome-autogen.sh: Do not show cmp's output.
+
 2007-01-29  Christian Persch  <chpe@svn.gnome.org>
 
 	* macros2/gnome-compiler-flags.m4:
